--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
         </div>
     </div>
 
-    <script src="/socket.io/socket.io.js"></script>
+    <script src="https://cdn.socket.io/4.8.1/socket.io.min.js"></script>
     <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
     <script src="sounds.js"></script>
     <script src="script.js"></script>
