Fix FUNCTION_INVOCATION_FAILED error and improve deployment stability

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
                 <button id="female-btn" class="gender-btn">Female</button>
                 <button id="other-btn" class="gender-btn">Other</button>
             </div>
+            <p><a href="/debug.html" target="_blank">Debug Connection</a></p>
         </div>
 
         <!-- Waiting Page -->
